--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
               <a href="#home">Home</a>
             </li>
             <li class="nav-link">
-              <a href="#article">Archive</a>
+              <a href="#article">Article</a>
             </li>
             <li class="nav-link">
               <a href="#category">Category</a>
